--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,11 +1,13 @@
 page-login {
-  .link {
-    text-align: center;
-    margin-top: 120px;
-  }
   .logo {
     text-align: center;
-    margin-bottom: 61px;
+    margin-bottom: 40px;
+  }
+  .link {
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    bottom: 20px;
   }
   .title {
     text-align: center;
