--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,3 +1,10 @@
 $color-auth-label : #a2a1b8 !default;
 $color-auth-btn: #55acef !default;
 $color-auth-shadow: #cbcbcb !default;
+
+$color-main-light-blue: #55acef !default;
+$color-sec-light-blue: #84e1ff !default;
+$color-third-light-blue: #58def9 !default;
+
+$color-grey: #4a4a4a !default;
+$color-bg-color: #fbf9f9 !default;
