--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,8 @@
 @import "colors";
 @import "auth";
+@import "tab";
+@import "navigation";
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, span {
   font-family: 'MYRIADPROREGULAR';
 }
