--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -8,3 +8,4 @@ $color-third-light-blue: #58def9 !default;
 
 $color-grey: #4a4a4a !default;
 $color-bg-color: #fbf9f9 !default;
+$color-trans-white: rgba(255, 255, 255, 0.64) !default;
