--- a/src/pages/account/account.scss
+++ b/src/pages/account/account.scss
@@ -1,3 +1,9 @@
 page-account {
-
+  .sub-title {
+    text-align: center;
+    margin: 25px 0;
+  }
+  .auth-form .button-ios {
+    margin-top: 10px;
+  }
 }
