--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,3 +6,7 @@
 h1, h2, h3, h4, h5, h6, p, span {
   font-family: 'MYRIADPROREGULAR';
 }
+
+.scroll-content {
+  background-color: $color-bg-color;
+}
